Revert "fix gallery not working on ios"
This reverts commit 9a20478d1e4accc43244a64267d14b571775ffaf.

--- a/src/components/gallery_block/style.css
+++ b/src/components/gallery_block/style.css
@@ -21,9 +21,7 @@
     object-position: center;
     width: 100%;
     height: 100%;
-    background-size: cover;
 }
-
 
 .grid_item:first-child {
     grid-area: 1 / 1 / 3 / 4;
